# cppUnitTestProject

include/: broom_logic.h
task1-assert/: CMakeLists.txt
task1-assert/src/: assert_functions.cpp  broom_logic.cpp
task2-ctest/: CMakeLists.txt
task2-ctest/include/: task2_logic.h
task2-ctest/src/: task2_logic.cpp
task2-ctest/test/: test_task2_logic.cpp
